@@ -1,19 +1,17 @@
 /*
- * Copyright (c) 2011 Wind River Systems; see
+ * Copyright (c) 2011, 2012 Wind River Systems; see
  * guts/COPYRIGHT for information.
  *
  * int system(const char *command)
  *	int rc = -1;
  */
- 	/* We want to ensure that the child process implicitly
-	 * spawned has the right environment.  So...
-	 */
-	int pid;
-
 	if (!command)
 		return 1;
 
 	pseudo_setupenv();
+	if (pseudo_get_value("PSEUDO_UNLOAD"))
+		pseudo_dropenv();
+
 	rc = real_system(command);
 
 /*	return rc;
